jsonschemadsl2ecore.trafo.opt/test/test39/validtests/example1.test39
{
	"family":{
		"personalInfo":{
			"name":"john",
			"surname":"doe"
		},
		"professionalInfo":{
			"job":"engineer",
			"level":1
		}
	},
	"email":"ale.ale@ale.ale"
}