jsonschemadsl2ecore.trafo.opt/test/test39/invalidtests/example2.test39
{
	"family":{
		"personalInfo":{
			 
			"surname":"doe"
		},
		"professionalInfo":{
			"job":"engineer",
			"level":1
		}
	},
	"email":"ale.ale@ale.ale"
}